# linetwstock

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.devcontainer/.config/fish/: config.fish
.github/workflows/: cdk_deploy.yml  cdk_destroy.yml
app/: exceptions.py  main.py
app/api/: api.py
app/api/endpoints/: get_stock_price.py  line_callback.py
app/cdk_stack/prod/: linetwstock_stack.py
app/cdk_stack/stg1/: linetwstock_stack.py
app/core/: config.py  utils.py
app/internal/: finmind_api.py  message_event.py
app/internal/models/: stock_price.py
app/models/: __init__.py  stock_price.py
app/schemas/: __init__.py
docker/cloud/: Dockerfile
docker/local/: Dockerfile
images/: architecture.drawio
scripts/: run.sh
tests/: test_http_method.py
