[tool.poetry]
name = "linetwstock"
version = "0.1.0"
description = ""
authors = ["sam159247 <sam159247@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
