[tool.poetry]
name = "linetwstock"
version = "0.1.0"
description = ""
authors = ["sam159247 <sam159247@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
black = "^21.11b1"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
